--- a/BelopetRepet/pages/sobre-nos/sobre_nos.html
+++ b/BelopetRepet/pages/sobre-nos/sobre_nos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" href="sobre_nos.css"> <!-- Aqui faz o link com o CSS -->    <title>Belo_Pet_Repete</title>
+ <link rel="stylesheet" href="/BelopetRepet/pages/sobre-nos/sobre_nos.css"> <!-- Aqui faz o link com o CSS -->    <title>Belo_Pet_Repete</title>
 <link rel="shortcut icon" href="/BelopetRepet/img/logo.png.png" type="png">
 </head>
 <body>
