--- a/BelopetRepet/pages/home/index.html
+++ b/BelopetRepet/pages/home/index.html
@@ -7,7 +7,7 @@
   <title>Belo Pet Repet</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-  <link rel="stylesheet" href="/BelopetRepet/home/style.css">
+  <link rel="stylesheet" href="/BelopetRepet/pages/home/style.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
   <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
     <div class="container d-flex align-items-center">
       <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="/BelopetRepet/img/cachorro.png" alt="Belo Pet Repet" width="60" class="me-2">
+        <img src="/BelopetRepet/img/cachorro.png" alt="Belo Pet Repet" width="100vw" class="auto">
         <strong>Belo Pet Repet</strong>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuNav">
@@ -24,10 +24,11 @@
       </button>
       <div class="collapse navbar-collapse" id="menuNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="/BelopetRepet/sobre-nos/sobre_nos.html">Quem Somos</a></li>
+          <li class="nav-item"><a class="nav-link" href="/BelopetRepet/pages/sobre-nos/sobre_nos.html">Quem Somos</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Como Cadastrar</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">LIsta de Adoção</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Lista de Adoção</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Contato</a></li>
+          <li class="nav-item"><a class="nav-link" href="/BelopetRepet/pages/login/login.html">Login</a></li>
         </ul>
       </div>
     </div>
@@ -67,6 +68,13 @@
       </div>
     </div>
   </section>
+
+<!-- flutter -->
+<div class="flutter d-flex align-items-center justify-content-center gap-3 py-4">
+  <img src="/BelopetRepet/img/cachorro.png" alt="flutter-img" width="50" height="auto" class="flutter-img">
+  <p class="mb-0">Todos os Direitos Reservados © 2025</p>
+</div>
+
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
