--- a/BelopetRepet/pages/cadastro/cadastro.html
+++ b/BelopetRepet/pages/cadastro/cadastro.html
@@ -22,9 +22,9 @@
       <div class="collapse navbar-collapse" id="menuNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="/BelopetRepet/pages/sobre-nos/sobre_nos.html">Quem Somos</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Como Cadastrar</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Lista de Adoção</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Contato</a></li>
+          <li class="nav-item"><a class="nav-link" href="/BelopetRepet/pages/guia_cadastro/guia_cadastro.html">Como Cadastrar</a></li>
+          <li class="nav-item"><a class="nav-link" href="/BelopetRepet/pages/lista/lista.html">Lista de Adoção</a></li>
+          <li class="nav-item"><a class="nav-link" href="/BelopetRepet/pages/contato/contato.html">Contato</a></li>
           <li class="nav-item"><a class="nav-link" href="/BelopetRepet/pages/login/login.html">Login</a></li>
         </ul>
       </div>
