--- a/BelopetRepet/pages/home/index.html
+++ b/BelopetRepet/pages/home/index.html
@@ -27,9 +27,9 @@
           <li class="nav-item"><a class="nav-link" href="/BelopetRepet/pages/sobre-nos/sobre_nos.html">Quem Somos</a></li>
           <li class="nav-item"><a class="nav-link" href="/BelopetRepet/pages/guia_cadastro/guia_cadastro.html">Como Cadastrar</a></li>
           <li class="nav-item"><a class="nav-link" href="/BelopetRepet/pages/lista/lista.html">Lista de Adoção</a></li>
-          <li class="nav-item"><a class="nav-link" href="/BelopetRepet/pages/contato/contato.html">Contato</a></li>
-          <li class="nav-item"><a class="nav-link" href="/BelopetRepet/pages/login/login.html">Login</a></li>
-        </ul>
+          <li class="nav-item"><a class="nav-link" href="/BelopetRepet/pages/faq/faq.html">FAQ</a></li>
+          <li class="nav-item"><a class="nav-link active" href="/BelopetRepet/pages/contato/contato.html">Contato</a></li>
+          <li class="nav-item"><a class="nav-link" href="/BelopetRepet/pages/login/login.html">Login</a></li>        </ul>
       </div>
     </div>
   </nav>
