--- a/BelopetRepet/pages/sobre-nos/sobre_nos.html
+++ b/BelopetRepet/pages/sobre-nos/sobre_nos.html
@@ -24,11 +24,12 @@
       </button>
       <div class="collapse navbar-collapse" id="menuNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link active" href="#">Quem Somos</a></li>
+          <li class="nav-item"><a class="nav-link" href="/BelopetRepet/pages/sobre-nos/sobre_nos.html">Quem Somos</a></li>
           <li class="nav-item"><a class="nav-link" href="/BelopetRepet/pages/guia_cadastro/guia_cadastro.html">Como Cadastrar</a></li>
           <li class="nav-item"><a class="nav-link" href="/BelopetRepet/pages/lista/lista.html">Lista de Adoção</a></li>
-          <li class="nav-item"><a class="nav-link" href="/BelopetRepet/pages/contato/contato.html">Contato</a></li>
-          <li class="nav-item"><a class="nav-link" href="/BelopetRepet/pages/login/login.html">Login</a></li>
+          <li class="nav-item"><a class="nav-link" href="/BelopetRepet/pages/faq/faq.html">FAQ</a></li>
+          <li class="nav-item"><a class="nav-link active" href="/BelopetRepet/pages/contato/contato.html">Contato</a></li>
+          <li class="nav-item"><a class="nav-link" href="/BelopetRepet/pages/login/login.html">Login</a></li>        </ul>
         </ul>
       </div>
     </div>
